Tutorial content and stubbing out other pages

--- a/docs/getting-started.mdx
+++ b/docs/getting-started.mdx
@@ -77,7 +77,7 @@ Installing this extension is **recommended** but not required. It enables the fo
 
 Search for `apexlang` in the extension marketplace and click "Install". You can also build from source from this [GitHub repo](https://github.com/apexlang/vscode-extension).
 
-![VS Code extension](@site/static/img/vs-code-extension-install.png)
+![VS Code extension](./img/vs-code-extension-install.png)
 
 ### Next steps
 
@@ -86,13 +86,13 @@ Now your environment supercharged for cloud-native applcation development!
 <div>
   <Link
     className="button button--secondary button--lg"
-    to="/docs/specification">
-    Learn the language - 15min ⏱️
+    to="/docs/tutorial-basics/create-a-spec">
+    Begin the tutorial - 5min ⏱️
   </Link>
   &nbsp;&nbsp;or&nbsp;&nbsp;
   <Link
     className="button button--secondary button--lg"
-    to="/docs/tutorial-basics/create-a-page">
-    Begin the tutorial
+    to="/docs/specification">
+    Learn the language - 15min ⏱️
   </Link>
 </div>
