Adding install scripts

--- a/docs/getting-started.mdx
+++ b/docs/getting-started.mdx
@@ -40,21 +40,21 @@ export const os = () => {
   <TabItem value="windows">
 
 ```shell
-powershell -Command "iwr -useb https://raw.githubusercontent.com/apexlang/cli/main/install/install.ps1 | iex"
+powershell -Command "iwr -useb https://apexlang.io/install.ps1 | iex"
 ```
 
   </TabItem>
   <TabItem value="macos">
 
 ```shell
-curl -fsSL https://raw.githubusercontent.com/apexlang/cli/main/install/install.sh | /bin/bash
+curl -fsSL https://apexlang.io/install.sh | /bin/bash
 ```
 
   </TabItem>
   <TabItem value="linux">
 
 ```shell
-wget -q https://raw.githubusercontent.com/apexlang/cli/main/install/install.sh -O - | /bin/bash
+wget -q https://apexlang.io/install.sh -O - | /bin/bash
 ```
 
   </TabItem>
