--- a/docs/getting-started.mdx
+++ b/docs/getting-started.mdx
@@ -84,7 +84,7 @@ Search for `apexlang` in the extension marketplace and click "Install". You can 
 
 ### Next steps
 
-Now your environment supercharged for cloud-native applcation development!
+Now your environment is supercharged for cloud-native application development!
 
 <div>
   <Link
