Tutorial: Generate boilerplate

--- a/docs/getting-started.mdx
+++ b/docs/getting-started.mdx
@@ -82,6 +82,12 @@ Search for `apexlang` in the extension marketplace and click "Install". You can 
 
 ![VS Code extension](./img/vs-code-extension-install.png)
 
+Alternatively, if `code` is in your PATH, you can also install by executing this command from a terminal.
+
+```shell
+code --install-extension apexlang.apexlang
+```
+
 ### Next steps
 
 Now your environment is supercharged for cloud-native application development!
