--- a/docs/tutorial-basics/generate-api-boilerplate.mdx
+++ b/docs/tutorial-basics/generate-api-boilerplate.mdx
@@ -17,7 +17,7 @@ go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
 go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
 ```
 
-## Adding Go API code generators
+## Add Go API code generators
 
 Update `apex.yaml` with the contents below.
 
