--- a/docs/getting-started.mdx
+++ b/docs/getting-started.mdx
@@ -4,7 +4,7 @@ sidebar_position: 2
 
 import Link from '@docusaurus/Link';
 
-# Getting started
+# Getting Started
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
