--- a/docs/tutorial/configure-codegen.mdx
+++ b/docs/tutorial/configure-codegen.mdx
@@ -77,8 +77,8 @@ generates:
     module: '@apexlang/codegen/openapiv3'
     visitorClass: OpenAPIV3Visitor
   proto/service.proto:
-    module: '@apexlang/codegen/grpc'
-    visitorClass: GRPCVisitor
+    module: '@apexlang/codegen/proto'
+    visitorClass: ProtoVisitor
     config:
       options:
         go_package: "github.com/myorg/myapps/pkg/urlshortener"
