--- a/docs/tutorial/generate-api-boilerplate.mdx
+++ b/docs/tutorial/generate-api-boilerplate.mdx
@@ -10,7 +10,7 @@ import TabItem from '@theme/TabItem';
 
 Wouldn't it be cool if you could also generate all the boilerplate code for your API? You are about to do just that using Go.
 
-:::note
+:::info
 
 You will need to have [Go installed](https://go.dev/dl/) and in your PATH. Additionally, you need [`protoc`](https://grpc.io/docs/protoc-installation/) and [`protoc-gen-go` installed](https://grpc.io/docs/languages/go/quickstart/).
 
@@ -37,8 +37,8 @@ generates:
     module: '@apexlang/codegen/openapiv3'
     visitorClass: OpenAPIV3Visitor
   proto/service.proto:
-    module: '@apexlang/codegen/grpc'
-    visitorClass: GRPCVisitor
+    module: '@apexlang/codegen/proto'
+    visitorClass: ProtoVisitor
     config:
       options:
         go_package: github.com/apexlang/getting-started/proto
@@ -81,7 +81,7 @@ generates:
     visitorClass: MainVisitor
 ```
 
-:::note
+:::info
 
 Now we are using some more options:
 
