--- a/docs/tutorial/configure-codegen.mdx
+++ b/docs/tutorial/configure-codegen.mdx
@@ -84,7 +84,7 @@ generates:
         go_package: "github.com/myorg/myapps/pkg/urlshortener"
 ```
 
-:::note
+:::info
 
 Using `config`, `ifNotExists`, and `runAfter` will be demonstrated later in this tutorial.
 
