Fix tutorial provide implementation

--- a/docs/tutorial/generate-api-boilerplate.mdx
+++ b/docs/tutorial/generate-api-boilerplate.mdx
@@ -138,7 +138,7 @@ type ShortenerImpl struct {
 	repository Repository
 }
 
-func NewShortenerImpl(log logr.Logger, repository Repository) *ShortenerImpl {
+func NewShortener(log logr.Logger, repository Repository) *ShortenerImpl {
 	return &ShortenerImpl{
 		log:        log,
 		repository: repository,
@@ -216,7 +216,7 @@ type RepositoryImpl struct {
 	byURL map[string]string
 }
 
-func NewRepositoryImpl(log logr.Logger) *RepositoryImpl {
+func NewRepository(log logr.Logger) *RepositoryImpl {
 	return &RepositoryImpl{
 		log:   log,
 		byID:  make(map[string]string),
