--- a/docs/tutorial/configure-codegen.mdx
+++ b/docs/tutorial/configure-codegen.mdx
@@ -154,17 +154,17 @@ type Command {
 A common task with regard to API and microservice development is sharing [OpenAPI](https://swagger.io/specification/) and [gRPC](https://grpc.io/docs/what-is-grpc/core-concepts/#service-definition) specifications with other teams. In this next step, we will generate the specifications for our **URL Shortener** service. In the root of your `urlshortener` directory, create a file named `apex.yaml`:
 
 ```yaml title="apex.yaml"
-spec: spec.apexlang
+spec: apex.axdl
 generates:
   openapi.yaml:
-    module: '@apexlang/codegen/openapiv3'
+    module: 'https://deno.land/x/apex_codegen@v0.1.1/openapiv3/mod.ts'
     visitorClass: OpenAPIV3Visitor
   proto/service.proto:
-    module: '@apexlang/codegen/proto'
+    module: 'https://deno.land/x/apex_codegen@v0.1.1/proto/mod.ts'
     visitorClass: ProtoVisitor
     config:
       options:
-        go_package: "github.com/myorg/myapps/pkg/urlshortener"
+        go_package: 'github.com/myorg/myapps/pkg/urlshortener'
 ```
 
 :::info
