--- a/docs/getting-started.mdx
+++ b/docs/getting-started.mdx
@@ -12,64 +12,41 @@ import useIsBrowser from '@docusaurus/useIsBrowser';
 
 ## Installation
 
+First, make sure you have [Deno](https://github.com/denoland/deno_install) installed.
+
 ### CLI
 
 The command line interface is a single binary that generates code from Apex documents.
-While it uses TypeScript for code generation, Node.js is not required. The Apex CLI is installed from the terminal/command prompt by executing the command below.
-
-export const os = () => {
-  const isBrowser = useIsBrowser();
-  const platform = isBrowser ? navigator.platform : '';
-  if (platform.substring('Mac') != 1) {
-    return "macos"
-  }
-  if (platform.substring('Linux') != 1) {
-    return "linux"
-  }
-  return "windows"
-}
+The Apex CLI is installed from the terminal/command prompt by executing the command below.
 
 ```shell
-powershell -Command "iwr -useb https://apexlang.io/install.ps1 | iex"
+deno install -A --unstable -f -n apex https://deno.land/x/apex_cli/apex.ts
 ```
-
-<Tabs
-  defaultValue={os()}
-  values={[
-    {label: 'Windows', value: 'windows'},
-    {label: 'MacOS', value: 'macos'},
-    {label: 'Linux', value: 'linux'},
-    {label: 'Homebrew', value: 'homebrew'},
-  ]}>
-  <TabItem value="windows">
 
 ```shell
-powershell -Command "iwr -useb https://apexlang.io/install.ps1 | iex"
+apex --help
 ```
 
-  </TabItem>
-  <TabItem value="macos">
+Output:
 
-```shell
-curl -fsSL https://apexlang.io/install.sh | /bin/bash
+```
+  Usage:   apex
+  Version: 0.0.2
+  Description:
+    A code generation tool using Apex, an interface definition language (IDL) for modeling software.
+  Options:
+    -h, --help  - Show this help.
+  Commands:
+    new          <template> <dir>    - Create a new project directory using a template.
+    init         <template>          - Initialize a project using a template.
+    generate     [configuration...]  - Run apex generators from a given configuration.
+    list                             - List available resources.
+    watch        [configuration...]  - Watch apex configuration for changes and trigger code generation.
+    upgrade                          - Upgrade apex executable to latest or given version.
+    help         [command]           - Show this help or the help of a sub-command.
+    completions                      - Generate shell completions.
 ```
 
-  </TabItem>
-  <TabItem value="linux">
-
-```shell
-wget -q https://apexlang.io/install.sh -O - | /bin/bash
-```
-
-  </TabItem>
-  <TabItem value="homebrew">
-
-```shell
-brew install apexlang/tap/apex
-```
-
-  </TabItem>
-</Tabs>
 
 The scripts download the latest release and copies the binary into your PATH. You can also install manually from [releases](https://github.com/apexlang/cli/releases) or build from source from this [GitHub repo](https://github.com/apexlang/cli).
 
