updated landing page, updated Apex->Apexlang, added task runner doc, added basic template documentation

--- a/docs/getting-started.mdx
+++ b/docs/getting-started.mdx
@@ -16,8 +16,8 @@ First, make sure you have [Deno](https://github.com/denoland/deno_install) insta
 
 ### CLI
 
-The command line interface is a single binary that generates code from Apex documents.
-The Apex CLI is installed from the terminal/command prompt by executing the command below.
+The command line interface is a single binary that generates code from Apexlang documents.
+The `apex` CLI is installed from the terminal/command prompt by executing the command below.
 
 ```shell
 deno install -A --unstable -f -n apex https://deno.land/x/apex_cli/apex.ts
@@ -33,7 +33,7 @@ Output:
   Usage:   apex
   Version: 0.0.2
   Description:
-    A code generation tool using Apex, an interface definition language (IDL) for modeling software.
+    A code generation tool using Apexlang, an interface definition language (IDL) for modeling software.
   Options:
     -h, --help  - Show this help.
   Commands:
@@ -47,14 +47,14 @@ Output:
     completions                      - Generate shell completions.
 ```
 
-### VS Code extension
+### VS Code extension for the Apexlang IDL
 
-Installing this extension is **recommended** but not required. It enables the following features while editing Apex documents:
+Installing this extension is **recommended** but not required. It enables the following features while editing Apexlang documents:
 
-* Syntax highlighting
-* Completions
-* Parsing and validation checks
-* Go to definition
+- Syntax highlighting
+- Completions
+- Parsing and validation checks
+- Go to definition
 
 Search for `apexlang` in the extension marketplace and click "Install". You can also build from source from this [GitHub repo](https://github.com/apexlang/vscode-extension).
 
@@ -68,18 +68,20 @@ code --install-extension apexlang.apexlang
 
 ### Next steps
 
-Now your environment is supercharged for cloud-native application development!
+Now your environment is supercharged for developing any applications!
 
 <div>
   <Link
     className="button button--secondary button--lg"
-    to="/docs/tutorial/create-a-spec">
+    to="/docs/tutorial/create-a-spec"
+  >
     Begin the tutorial - 5min ⏱️
   </Link>
   &nbsp;&nbsp;or&nbsp;&nbsp;
   <Link
     className="button button--secondary button--lg"
-    to="/docs/specification">
+    to="/docs/specification"
+  >
     Learn the language - 15min ⏱️
   </Link>
 </div>
