--- a/docs/tutorial/generate-api-boilerplate.mdx
+++ b/docs/tutorial/generate-api-boilerplate.mdx
@@ -37,10 +37,10 @@ config:
     interface: logr.Logger
 generates:
   openapi.yaml:
-    module: 'https://deno.land/x/apex_codegen@v0.1.2/openapiv3/mod.ts'
+    module: 'https://deno.land/x/apex_codegen@v0.1.9/openapiv3/mod.ts'
     visitorClass: OpenAPIV3Visitor
   proto/service.proto:
-    module: 'https://deno.land/x/apex_codegen@v0.1.2/proto/mod.ts'
+    module: 'https://deno.land/x/apex_codegen@v0.1.9/proto/mod.ts'
     visitorClass: ProtoVisitor
     config:
       options:
@@ -54,33 +54,35 @@ generates:
           --go-grpc_opt=paths=source_relative
           proto/service.proto
   pkg/urlshortener/interfaces.go:
-    module: 'https://deno.land/x/apex_codegen@v0.1.2/go/mod.ts'
+    module: 'https://deno.land/x/apex_codegen@v0.1.9/go/mod.ts'
     visitorClass: InterfacesVisitor
-  pkg/urlshortener/fiber.go:
-    module: 'https://deno.land/x/apex_codegen@v0.1.2/go/mod.ts'
-    visitorClass: FiberVisitor
-  pkg/urlshortener/grpc.go:
-    module: 'https://deno.land/x/apex_codegen@v0.1.2/go/mod.ts'
-    visitorClass: GRPCVisitor
+  pkg/urlshortener/api.go:
+    module: 'https://deno.land/x/apex_codegen@v0.1.9/go/mod.ts'
+    visitorClass: GoVisitor
     config:
       protoPackage: github.com/apexlang/getting-started/proto
+    append:
+      - module: 'https://deno.land/x/apex_codegen@v0.1.9/go/mod.ts'
+        visitorClass: FiberVisitor
+      - module: 'https://deno.land/x/apex_codegen@v0.1.9/go/mod.ts'
+        visitorClass: GRPCVisitor
   pkg/urlshortener/services.go:
     ifNotExists: true
-    module: 'https://deno.land/x/apex_codegen@v0.1.2/go/mod.ts'
+    module: 'https://deno.land/x/apex_codegen@v0.1.9/go/mod.ts'
     visitorClass: ScaffoldVisitor
     config:
       types:
         - service
   pkg/urlshortener/repositories.go:
     ifNotExists: true
-    module: 'https://deno.land/x/apex_codegen@v0.1.2/go/mod.ts'
+    module: 'https://deno.land/x/apex_codegen@v0.1.9/go/mod.ts'
     visitorClass: ScaffoldVisitor
     config:
       names:
         - Repository
   cmd/main.go:
     ifNotExists: false  # Change to true to control dependency injection
-    module: 'https://deno.land/x/apex_codegen@v0.1.2/go/mod.ts'
+    module: 'https://deno.land/x/apex_codegen@v0.1.9/go/mod.ts'
     visitorClass: MainVisitor
 ```
 
