--- a/docs/tutorial/configure-codegen.mdx
+++ b/docs/tutorial/configure-codegen.mdx
@@ -149,10 +149,10 @@ A common task with regard to API and microservice development is sharing [OpenAP
 spec: apex.axdl
 generates:
   openapi.yaml:
-    module: 'https://deno.land/x/apex_codegen@v0.1.9/openapiv3/mod.ts'
+    module: 'jsr:@apexlang/codegen/openapiv3'
     visitorClass: OpenAPIV3Visitor
   proto/service.proto:
-    module: 'https://deno.land/x/apex_codegen@v0.1.9/proto/mod.ts'
+    module: 'jsr:@apexlang/codegen/proto'
     visitorClass: ProtoVisitor
     config:
       options:
