--- a/docs/tutorial/generate-api-boilerplate.mdx
+++ b/docs/tutorial/generate-api-boilerplate.mdx
@@ -37,10 +37,10 @@ config:
     interface: logr.Logger
 generates:
   openapi.yaml:
-    module: 'https://deno.land/x/apex_codegen@v0.1.9/openapiv3/mod.ts'
+    module: 'jsr:@apexlang/codegen/openapiv3'
     visitorClass: OpenAPIV3Visitor
   proto/service.proto:
-    module: 'https://deno.land/x/apex_codegen@v0.1.9/proto/mod.ts'
+    module: 'jsr:@apexlang/codegen/proto'
     visitorClass: ProtoVisitor
     config:
       options:
@@ -54,35 +54,35 @@ generates:
           --go-grpc_opt=paths=source_relative
           proto/service.proto
   pkg/urlshortener/interfaces.go:
-    module: 'https://deno.land/x/apex_codegen@v0.1.9/go/mod.ts'
+    module: 'jsr:@apexlang/codegen/go'
     visitorClass: InterfacesVisitor
   pkg/urlshortener/api.go:
-    module: 'https://deno.land/x/apex_codegen@v0.1.9/go/mod.ts'
+    module: 'jsr:@apexlang/codegen/go'
     visitorClass: GoVisitor
     config:
       protoPackage: github.com/apexlang/getting-started/proto
     append:
-      - module: 'https://deno.land/x/apex_codegen@v0.1.9/go/mod.ts'
+      - module: 'jsr:@apexlang/codegen/go'
         visitorClass: FiberVisitor
-      - module: 'https://deno.land/x/apex_codegen@v0.1.9/go/mod.ts'
+      - module: 'jsr:@apexlang/codegen/go'
         visitorClass: GRPCVisitor
   pkg/urlshortener/services.go:
     ifNotExists: true
-    module: 'https://deno.land/x/apex_codegen@v0.1.9/go/mod.ts'
+    module: 'jsr:@apexlang/codegen/go'
     visitorClass: ScaffoldVisitor
     config:
       types:
         - service
   pkg/urlshortener/repositories.go:
     ifNotExists: true
-    module: 'https://deno.land/x/apex_codegen@v0.1.9/go/mod.ts'
+    module: 'jsr:@apexlang/codegen/go'
     visitorClass: ScaffoldVisitor
     config:
       names:
         - Repository
   cmd/main.go:
     ifNotExists: false  # Change to true to control dependency injection
-    module: 'https://deno.land/x/apex_codegen@v0.1.9/go/mod.ts'
+    module: 'jsr:@apexlang/codegen/go'
     visitorClass: MainVisitor
 ```
 
@@ -101,6 +101,8 @@ Run these commands to regenerate the code, initialize the go module, and downloa
 ```cli
 apex generate apex.yaml
 go mod init github.com/apexlang/getting-started
+go get google.golang.org/protobuf/reflect/protoreflect
+go get google.golang.org/grpc
 go mod tidy
 ```
 
@@ -276,4 +278,11 @@ Finally, run the service and test with your favorite API testing tool, like [Pos
 
 ```cli
 go run cmd/main.go
+```
+
+You should see these log lines on startup.
+
+```
+INFO	cmd/main.go:50	HTTP server	{"address": ":3000"}
+INFO	cmd/main.go:62	gRPC server	{"address": ":4000"}
 ```
