Add instructions to install basic/apexlang code generators/templates.

--- a/docs/getting-started.mdx
+++ b/docs/getting-started.mdx
@@ -57,6 +57,26 @@ Commands:
   completions                      - Generate shell completions.  
 ```
 
+### Install basic code generators
+
+```shell
+apex install jsr:@apexlang/codegen
+```
+
+```shell
+INFO Installing @apexlang/basic...
+INFO Installing @apexlang/generator...
+INFO Installing @apexlang/go...
+INFO Installing @apexlang/nodejs...
+INFO Installing @apexlang/python...
+```
+
+The `apex list templates` will print out the installed project templates.
+
+```shell
+apex list templates
+```
+
 ### VS Code extension for the Apexlang IDL
 
 Installing this extension is **recommended** but not required. It enables the following features while editing Apexlang documents:
